<resources>
    <string name="app_name">ZohoTask</string>
    <string name="base_url">https://randomuser.me/api/</string>
    <string name="weather_url">https://api.weatherapi.com/v1/current.json?key=249edc49be03483fb16112355222705&amp;aqi=yes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty">-</string>
    <string name="email">Email:</string>
    <string name="phone">Phone:</string>
    <string name="phase_2">Phase - 2</string>
    <string name="phase_1">Phase - 1</string>
    <string name="search">Search</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="result_could_not_be_loaded">Result could not be loaded</string>
    <string name="retry">Retry</string>
    <string name="no_data">No data</string>
    <string name="error">Error: No data found</string>
    <string name="full_name">Full Name</string>
    <string name="_email">Email</string>
    <string name="_phone">Phone</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="zoho_task">Zoho Task</string>
    <string name="random_weather">Random Weather</string>
    <string name="air_quality">Air Quality</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="_air_quality">Air Quality :</string>
    <string name="_humidity">Humidity :</string>
    <string name="wind_speed">Wind Speed :</string>
    <string name="turn_on_gps">Turn ON GPS</string>
    <string name="good">Good</string>
    <string name="moderate">Moderate</string>
    <string name="unhealthy">Unhealthy</string>
    <string name="hazardous">Hazardous</string>
    <string name="enable_gps_permission">Enable GPS Permission</string>
    <string name="location_permission_required">Location Permission Required</string>

</resources>