<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ui.phase1.detail.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivProfileImg"
            android:layout_width="@dimen/_0dp"
            android:layout_height="400dp"
            android:background="@color/border_grey"
            android:scaleType="fitXY"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tvFullName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ProgressBar
            android:id="@+id/progressBarImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            style="?android:attr/progressBarStyleLarge"
            android:padding="@dimen/_10dp"
            app:layout_constraintTop_toTopOf="@id/ivProfileImg"
            app:layout_constraintBottom_toBottomOf="@id/ivProfileImg"
            app:layout_constraintStart_toStartOf="@id/ivProfileImg"
            app:layout_constraintEnd_toEndOf="@id/ivProfileImg"
            android:indeterminateTint="@color/card_bg_grey"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvFullName"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginStart="@dimen/_15dp"
            android:layout_marginEnd="@dimen/_15dp"
            android:layout_marginBottom="@dimen/_5dp"
            style="@style/text_black_bold_14"
            android:text="@string/full_name"
            app:layout_constraintTop_toBottomOf="@id/ivProfileImg"
            app:layout_constraintBottom_toTopOf="@id/tvFullNameText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvFullNameText"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            style="@style/text_black_regular_14"
            android:text="@string/empty"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginBottom="@dimen/_5dp"
            app:layout_constraintTop_toBottomOf="@id/tvFullName"
            app:layout_constraintBottom_toTopOf="@id/viewFullName"
            app:layout_constraintStart_toStartOf="@id/tvFullName"
            app:layout_constraintEnd_toEndOf="@id/tvFullName"/>

        <View
            android:id="@+id/viewFullName"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_1dp"
            android:background="@color/border_grey"
            app:layout_constraintTop_toBottomOf="@id/tvFullNameText"
            app:layout_constraintBottom_toTopOf="@id/tvEmail"
            app:layout_constraintStart_toStartOf="@id/tvFullName"
            app:layout_constraintEnd_toEndOf="@id/tvFullName"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEmail"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            style="@style/text_black_bold_14"
            android:text="@string/_email"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintTop_toBottomOf="@id/viewFullName"
            app:layout_constraintBottom_toTopOf="@id/tvEmailText"
            app:layout_constraintStart_toStartOf="@id/tvFullName"
            app:layout_constraintEnd_toEndOf="@id/tvFullName"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEmailText"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            style="@style/text_black_regular_14"
            android:text="@string/empty"
            android:layout_marginBottom="@dimen/_5dp"
            app:layout_constraintTop_toBottomOf="@id/tvEmail"
            app:layout_constraintBottom_toTopOf="@id/viewEmail"
            app:layout_constraintStart_toStartOf="@id/tvFullName"
            app:layout_constraintEnd_toEndOf="@id/tvFullName"/>

        <View
            android:id="@+id/viewEmail"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_1dp"
            android:background="@color/border_grey"
            app:layout_constraintTop_toBottomOf="@id/tvEmailText"
            app:layout_constraintBottom_toTopOf="@id/tvPhone"
            app:layout_constraintStart_toStartOf="@id/tvFullName"
            app:layout_constraintEnd_toEndOf="@id/tvFullName"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPhone"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            style="@style/text_black_bold_14"
            android:text="@string/_phone"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintTop_toBottomOf="@id/viewEmail"
            app:layout_constraintBottom_toTopOf="@id/tvPhoneText"
            app:layout_constraintStart_toStartOf="@id/tvFullName"
            app:layout_constraintEnd_toEndOf="@id/tvFullName"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPhoneText"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            style="@style/text_black_regular_14"
            android:text="@string/empty"
            android:layout_marginBottom="@dimen/_5dp"
            app:layout_constraintTop_toBottomOf="@id/tvPhone"
            app:layout_constraintBottom_toTopOf="@id/viewPhone"
            app:layout_constraintStart_toStartOf="@id/tvFullName"
            app:layout_constraintEnd_toEndOf="@id/tvFullName"/>

        <View
            android:id="@+id/viewPhone"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_1dp"
            android:background="@color/border_grey"
            app:layout_constraintTop_toBottomOf="@id/tvPhoneText"
            app:layout_constraintBottom_toTopOf="@id/tvDob"
            app:layout_constraintStart_toStartOf="@id/tvFullName"
            app:layout_constraintEnd_toEndOf="@id/tvFullName"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDob"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            style="@style/text_black_bold_14"
            android:text="@string/date_of_birth"
            app:layout_constraintTop_toBottomOf="@id/viewPhone"
            app:layout_constraintBottom_toTopOf="@id/tvDobText"
            app:layout_constraintStart_toStartOf="@id/tvFullName"
            app:layout_constraintEnd_toStartOf="@id/tvAge"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDobText"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            style="@style/text_black_regular_14"
            android:text="@string/empty"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginBottom="@dimen/_5dp"
            app:layout_constraintTop_toBottomOf="@id/tvDob"
            app:layout_constraintBottom_toTopOf="@id/viewDob"
            app:layout_constraintStart_toStartOf="@id/tvDob"
            app:layout_constraintEnd_toEndOf="@id/tvDob"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAge"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_0dp"
            style="@style/text_black_bold_14"
            android:text="@string/age"
            app:layout_constraintTop_toTopOf="@id/tvDob"
            app:layout_constraintBottom_toBottomOf="@id/tvDob"
            app:layout_constraintStart_toEndOf="@id/tvDob"
            app:layout_constraintEnd_toEndOf="@id/tvFullName"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAgeText"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_0dp"
            style="@style/text_black_regular_14"
            android:text="@string/empty"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintTop_toTopOf="@id/tvDobText"
            app:layout_constraintBottom_toBottomOf="@id/tvDobText"
            app:layout_constraintStart_toStartOf="@id/tvAge"
            app:layout_constraintEnd_toEndOf="@id/tvAge"/>

        <View
            android:id="@+id/viewDob"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_1dp"
            android:background="@color/border_grey"
            app:layout_constraintTop_toBottomOf="@id/tvDobText"
            app:layout_constraintBottom_toTopOf="@id/tvAddress"
            app:layout_constraintStart_toStartOf="@id/tvFullName"
            app:layout_constraintEnd_toEndOf="@id/tvFullName"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAddress"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            style="@style/text_black_bold_14"
            android:text="@string/address"
            app:layout_constraintTop_toBottomOf="@id/viewDob"
            app:layout_constraintBottom_toTopOf="@id/tvAddressText"
            app:layout_constraintStart_toStartOf="@id/tvFullName"
            app:layout_constraintEnd_toEndOf="@id/tvFullName"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAddressText"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            style="@style/text_black_regular_14"
            android:maxLines="3"
            android:ellipsize="end"
            android:text="@string/empty"
            android:layout_marginBottom="@dimen/_5dp"
            app:layout_constraintTop_toBottomOf="@id/tvAddress"
            app:layout_constraintBottom_toTopOf="@id/viewAddress"
            app:layout_constraintStart_toStartOf="@id/tvFullName"
            app:layout_constraintEnd_toEndOf="@id/tvFullName"/>

        <View
            android:id="@+id/viewAddress"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_1dp"
            android:background="@color/border_grey"
            android:layout_marginBottom="@dimen/_20dp"
            app:layout_constraintTop_toBottomOf="@id/tvAddressText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvFullName"
            app:layout_constraintEnd_toEndOf="@id/tvFullName"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>