<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    android:id="@+id/mcViewList"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/_10dp"
    app:cardElevation="@dimen/_5dp"
    app:cardBackgroundColor="@color/card_bg_grey"
    android:layout_marginStart="@dimen/_20dp"
    android:layout_marginEnd="@dimen/_20dp"
    android:layout_marginTop="@dimen/_10dp"
    android:layout_marginBottom="@dimen/_10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="@dimen/_5dp"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivProfileImage"
            android:layout_width="@dimen/_120dp"
            android:layout_height="@dimen/_100dp"
            android:layout_margin="@dimen/_5dp"
            android:scaleType="matrix"
            android:background="@color/border_grey"
            app:shapeAppearanceOverlay="@style/rounded_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvFirstNameText"/>

        <ProgressBar
            android:id="@+id/progressBarImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            style="?android:attr/progressBarStyleSmall"
            android:padding="@dimen/_10dp"
            app:layout_constraintTop_toTopOf="@id/ivProfileImage"
            app:layout_constraintBottom_toBottomOf="@id/ivProfileImage"
            app:layout_constraintStart_toStartOf="@id/ivProfileImage"
            app:layout_constraintEnd_toEndOf="@id/ivProfileImage"
            android:indeterminateTint="@color/card_bg_grey"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvFirstNameText"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:layout_marginEnd="@dimen/_15dp"
            android:layout_marginStart="@dimen/_5dp"
            style="@style/text_black_bold_14"
            app:layout_constraintStart_toEndOf="@id/ivProfileImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/ivProfileImage"
            app:layout_constraintBottom_toTopOf="@id/tvEmail"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            style="@style/text_black_bold_14"
            app:layout_constraintStart_toStartOf="@id/tvFirstNameText"
            app:layout_constraintEnd_toStartOf="@id/tvEmailText"
            app:layout_constraintTop_toBottomOf="@id/tvFirstNameText"
            app:layout_constraintBottom_toTopOf="@id/tvPhone"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEmailText"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_0dp"
            android:text="@string/empty"
            style="@style/text_black_regular_14"
            app:layout_constraintStart_toEndOf="@id/tvEmail"
            app:layout_constraintEnd_toEndOf="@id/tvFirstNameText"
            app:layout_constraintTop_toTopOf="@id/tvEmail"
            app:layout_constraintBottom_toBottomOf="@id/tvEmail"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            style="@style/text_black_bold_14"
            app:layout_constraintStart_toStartOf="@+id/tvFirstNameText"
            app:layout_constraintEnd_toStartOf="@id/tvPhoneText"
            app:layout_constraintTop_toBottomOf="@id/tvEmail"
            app:layout_constraintBottom_toBottomOf="@id/ivProfileImage"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPhoneText"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_0dp"
            android:text="@string/empty"
            style="@style/text_black_regular_14"
            app:layout_constraintStart_toEndOf="@id/tvPhone"
            app:layout_constraintEnd_toEndOf="@id/tvFirstNameText"
            app:layout_constraintTop_toTopOf="@id/tvPhone"
            app:layout_constraintBottom_toBottomOf="@id/tvPhone"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>