<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.phase1.main.Phase1Fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clActionBar"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_10dp"
        android:layout_height="?android:attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etSearchText"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:hint="@string/search"
            style="@style/text_black_regular_14"
            android:padding="@dimen/_10dp"
            android:visibility="gone"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_20dp"
            android:drawableEnd="@drawable/ic_search"
            android:background="@drawable/edit_text_rounded_edge"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ivSearch"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHeader"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10dp"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_10dp"
            android:text="@string/zoho_task"

            style="@style/text_black_bold_18"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ivSearch"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search"
            android:padding="@dimen/_10dp"
            android:clickable="false"
            android:layout_marginEnd="@dimen/_20dp"
            android:background="@drawable/dialog_rounded_edge"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rclrViewItems"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        android:layout_marginTop="@dimen/_10dp"
        tools:listitem="@layout/layout_list_item"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clActionBar"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clError"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0dp"
        android:layout_marginTop="@dimen/_10dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/clActionBar"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvErrorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_data"
            style="@style/text_black_bold_14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clProgressBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0dp"
        android:visibility="gone"
        android:layout_marginTop="@dimen/_10dp"
        app:layout_constraintTop_toBottomOf="@id/clActionBar"
        app:layout_constraintBottom_toBottomOf="parent">

        <ProgressBar
            android:id="@+id/progress_bar_footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/progress_grey"
            app:layout_constraintStart_toStartOf="parent"
            style="?android:attr/progressBarStyleLarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>